--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,3 @@
-[submodule "themes/ananke"]
-	path = themes/ananke
-	url = https://github.com/theNewDynamic/gohugo-theme-ananke
-[submodule "themes/simple-style"]
-	path = themes/simple-style
-	url = https://github.com/yanlinlin82/simple-style
+[submodule "themes/smol"]
+	path = themes/smol
+	url = https://github.com/colorchestra/smol
